configure Firebase integration and update localization structure; add GoogleService-Info.plist and google-services.json

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,5 +34,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/translations/
+    - assets/localization/
     - assets/images/
