--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   #ui
   flutter_spinkit: ^5.2.1
   skeletonizer: ^1.4.2
+  flutter_advanced_drawer: ^1.3.7
 
 dev_dependencies:
   flutter_test:
