--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   #core
+  go_router: ^14.4.1
   equatable: ^2.0.5
   json_annotation: ^4.9.0
   flutter_bloc: ^8.1.6
@@ -25,10 +26,12 @@ dependencies:
   skeletonizer: ^1.4.2
   flutter_advanced_drawer: ^1.3.7
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.13
+  go_router_builder: ^2.7.1
   json_serializable: ^6.8.0
   very_good_analysis: ^6.0.0
 
