--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   skeletonizer: ^1.4.2
   flutter_advanced_drawer: ^1.3.7
+  phone_form_field: ^10.0.1
 
 
 dev_dependencies:
