--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   skeletonizer: ^1.4.2
   flutter_advanced_drawer: ^1.3.7
   phone_form_field: ^10.0.1
+  circular_menu: ^4.0.0
 
 
 dev_dependencies:
