--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   collection: ^1.18.0
   image_picker: ^1.1.2
   #ui
+  firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
   skeletonizer: ^1.4.2
   flutter_advanced_drawer: ^1.3.7
