--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,42 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"piksel-tesisat","appId":"1:808781760772:android:18549fdb4539104dbea851","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"piksel-tesisat","appId":"1:808781760772:ios:2ed616ff85880513bea851","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"piksel-tesisat","configurations":{"android":"1:808781760772:android:18549fdb4539104dbea851","ios":"1:808781760772:ios:2ed616ff85880513bea851","web":"1:808781760772:web:6ffefec60c92e632bea851"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "piksel-tesisat",
+          "appId": "1:808781760772:android:18549fdb4539104dbea851",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "ios": {
+        "default": {
+          "projectId": "piksel-tesisat",
+          "appId": "1:808781760772:ios:2ed616ff85880513bea851",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "piksel-tesisat",
+          "configurations": {
+            "android": "1:808781760772:android:18549fdb4539104dbea851",
+            "ios": "1:808781760772:ios:2ed616ff85880513bea851",
+            "web": "1:808781760772:web:6ffefec60c92e632bea851"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "europe-west1"
+    }
+  }
+}
