--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_advanced_drawer: ^1.3.7
   phone_form_field: ^10.0.1
   circular_menu: ^4.0.0
-
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
