--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   phone_form_field: ^10.0.1
   circular_menu: ^4.0.0
   toastification: ^2.3.0
+  easy_date_timeline: ^2.0.6
 
 dev_dependencies:
   flutter_test:
