--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_storage: ^12.3.5
   collection: ^1.18.0
   image_picker: ^1.1.2
+  kartal: ^4.1.0
   #ui
   firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
