--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   circular_menu: ^4.0.0
   toastification: ^2.3.0
   easy_date_timeline: ^2.0.6
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
