--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   collection: ^1.18.0
   image_picker: ^1.1.2
   kartal: ^4.1.0
+  get_it: ^7.6.7
+  injectable: ^2.3.2
   #ui
   firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
@@ -38,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   go_router_builder: ^2.7.1
   very_good_analysis: ^7.0.0
+  injectable_generator: ^2.4.1
 
 flutter:
   uses-material-design: true
