feat: update analysis options to ignore library private types in public API; remove unused dependencies from pubspec.lock; refactor UI components to utilize new context extensions for improved theming and localization support

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,4 +4,6 @@ linter:
   rules:
     public_member_api_docs: false
 analyzer:
+  errors:
+    library_private_types_in_public_api: ignore
   exclude: [lib/**.g.dart, pubspec.yaml]
