--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   firebase_storage: ^12.3.5
   collection: ^1.18.0
   image_picker: ^1.1.2
-  kartal: ^4.1.0
+  # kartal: ^4.1.0
   get_it: ^7.6.7
   injectable: ^2.3.2
   json_annotation: ^4.9.0
