--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   #ui
   firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
-  skeletonizer: ^1.4.2
+  skeletonizer: 
+    git:
+      url: https://github.com/tahsin-emre/skeletonizer.git
+      ref: main
   flutter_advanced_drawer: ^1.3.7
   phone_form_field: ^10.0.1
   circular_menu: ^4.0.0
