--- a/firebase.json
+++ b/firebase.json
@@ -29,14 +29,11 @@
     }
   },
   "hosting": {
-    "source": ".",
+    "public": "build/web/",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "europe-west1"
-    }
+    ]
   }
 }
