feat: add rps package for script management; update README.md with script usage instructions and examples, enhancing project documentation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   injectable: ^2.3.2
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.1.0
+  rps: ^0.7.0
   #ui
   firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
