--- a/rps.yaml
+++ b/rps.yaml
@@ -1,26 +1,6 @@
 scripts:
-  deploy_web:
-    description: Deploy web version to Firebase
-    command: flutter build web --release && firebase deploy --only hosting
-    category: deployment
+  deploy_web: flutter build web --release && firebase deploy --only hosting
+  pub_reload: flutter clean && flutter pub get
+  build_runner: flutter pub run build_runner build --delete-conflicting-outputs
+  lang: dart run easy_localization:generate -O lib/product/init/localization -f keys -o locale_keys.g.dart --source-dir assets/localization
 
-  pub_reload:
-    description: Clean and reload pub dependencies
-    command: flutter clean && flutter pub get
-    category: development
-
-  build_runner:
-    description: Run build_runner to generate codes
-    command: flutter pub run build_runner build --delete-conflicting-outputs
-    category: development
-
-  lang:
-    description: Generate localization files
-    command: dart run easy_localization:generate -O lib/product/init/localization -f keys -o locale_keys.g.dart --source-dir assets/localization
-    category: development
-
-categories:
-  deployment:
-    description: Deployment related scripts
-  development:
-    description: Development related scripts 
