--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_storage: ^12.3.5
   collection: ^1.18.0
   image_picker: ^1.1.2
+
   # kartal: ^4.1.0
   get_it: ^8.0.3
   injectable: ^2.3.2
@@ -55,3 +56,4 @@ flutter:
     - assets/localization/
     - assets/images/
     - assets/.env
+    - assets/svg/
