--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ migrate_working_dir/
 /build/
 /.firebase/
 
+# Firebase configuration
+lib/firebase_options.dart
+
 # Symbolication related
 app.*.symbols
 
