feat: update dependencies in pubspec.yaml and pubspec.lock to latest versions, refactor mixins for improved type safety, and enhance routing with new route definitions for better navigation structure

--- a/rps.yaml
+++ b/rps.yaml
@@ -1,6 +1,6 @@
 scripts:
   deploy_web: flutter build web --release && firebase deploy --only hosting
   pub_reload: flutter clean && flutter pub get
-  build_runner: flutter pub run build_runner build --delete-conflicting-outputs
+  build_runner: dart run build_runner build --delete-conflicting-outputs
   lang: dart run easy_localization:generate -O lib/product/init/localization -f keys -o locale_keys.g.dart --source-dir assets/localization
 
