--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   #core
-  go_router: ^14.4.1
+  go_router: ^15.1.3
   equatable: ^2.0.5
   flutter_bloc: ^9.1.0
   easy_localization: ^3.0.7
@@ -20,8 +20,6 @@ dependencies:
   firebase_storage: ^12.3.5
   collection: ^1.18.0
   image_picker: ^1.1.2
-
-  # kartal: ^4.1.0
   get_it: ^8.0.3
   injectable: ^2.3.2
   json_annotation: ^4.9.0
@@ -30,10 +28,7 @@ dependencies:
   #ui
   firebase_ui_firestore: ^1.7.0
   flutter_spinkit: ^5.2.1
-  skeletonizer: 
-    git:
-      url: https://github.com/tahsin-emre/skeletonizer.git
-      ref: main
+  skeletonizer: ^2.0.1
   flutter_advanced_drawer: ^1.3.7
   phone_form_field: ^10.0.1
   circular_menu: ^4.0.0
@@ -45,8 +40,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.13
-  go_router_builder: ^2.7.1
-  very_good_analysis: ^7.0.0
+  go_router_builder: ^3.0.0
+  very_good_analysis: ^9.0.0
   injectable_generator: ^2.4.1
   json_serializable: ^6.9.4
 
