--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   toastification: ^3.0.2
   easy_date_timeline: ^2.0.6
   flutter_speed_dial: ^7.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
